--- a/public/stylesheets/common.css
+++ b/public/stylesheets/common.css
@@ -3,7 +3,7 @@ body{
     -webkit-font-smoothing: antialiased;
     word-wrap: break-word;
     line-height: 1.8;
-    margin: 0;
+    margin: 0 auto;
     font-style: normal;
     letter-spacing: 0.08em;
 }
@@ -14,11 +14,12 @@ figure{
     margin: 0 !important;
 }
 a{
-    color: #007dcc;
     text-decoration: none;
+    cursor: pointer;
 }
 input{
     outline: none;
+    font-size: .875rem !important;
 }
 img{
     width: 30px;
@@ -29,6 +30,11 @@ img{
 }
 .align-ct{
     align-items: center;
+}
+.body-page{
+    max-width: 1260px;
+    margin: auto;
+    padding: .5rem;
 }
 :root {
     --color-text-primary: rgb(36 41 46);
