--- a/ui/components/home/Header.css
+++ b/ui/components/home/Header.css
@@ -1,9 +1,12 @@
 .Header-wrp{
     background: var(--color-header-bg);
+    width: 100%;
 }
 .Header{
     width: 100%;
-    margin: .75rem 1rem;
+    margin: .75rem auto;
+    max-width: 1260px;
+    color: #fff;
 }
 .Header-wrp, .Header, .Header-item {
     display: flex;
@@ -29,4 +32,20 @@
     color: #fff;
     font-size: 14px;
     font-weight: 500;
+}
+.Header-Action{
+    margin-left: 2rem;
+    color: #fff;
+    font-weight: 500;
+    font-size: 1rem;
+}
+.hd-action-i{
+    display: inline-block;
+    padding: 0 .875rem;
+}
+.hd-action-i--active{
+    border-bottom: .125rem solid var(--color-btn-primary-bg);
+}
+.hd-action-i:hover, .hd-action-i:focus{
+    color: #ccc;
 }
