--- a/ui/components/login/LoginPage.css
+++ b/ui/components/login/LoginPage.css
@@ -56,7 +56,7 @@
     height: 50px;
     width: 50px;
 }
-.Login-btn{
+.Login-btn, .save-detail{
     background-color: var(--color-btn-primary-bg) !important;
     color: #FFFFFF !important;
 }
@@ -68,4 +68,14 @@
     .Login-wrp{
         margin-top: 0rem;
     }
+    .Header-logo-txt{
+        display: none;
+    }
+    .Header-Action{
+        margin-left: 1rem !important;
+    }
+}
+.Loader{
+    text-align: center;
+    margin: 1rem;
 }
