--- a/public/stylesheets/common.css
+++ b/public/stylesheets/common.css
@@ -18,6 +18,7 @@ a{
     cursor: pointer;
 }
 input{
+    /* padding: .875rem !important; */
     outline: none;
     font-size: .875rem !important;
 }
